# SDI_Reader

./: CMakeLists.txt  README.md  load_driver.sh  xdma.ko
config/: NXConfig.ini
include/: CircleBuffer.h  common.h  cpthread.h  cxdma_reader.h  cxdma_receiver.h  cxdma_rw_synchronizer.h  cxdma_utils.h  event.h  time_counter.h
src/: CircleBuffer.cpp  common.cpp  cpthread.cpp  cxdma_demo.cpp  cxdma_reader.cpp  cxdma_receiver.cpp  cxdma_utils.cpp  event.cpp  sdireader.cpp
